--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("./assets/normalize.css");
+
+* { position: relative; box-sizing: border-box; }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.w-100 {
+    width: 100%;
+}
