--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,21 +1,23 @@
 <div class="center header-parent">
-    <div class="container header-content" style="gap: 20px;">
-        <div style="color: #fff; white-space: nowrap;">
-            Search User by ID
-        </div>
-        <div class="w-100">
-            <input class="w-100" placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="searchId" (keyup)="searchUsers()">
+    <div class="container">
+        <div class="header-content" style="gap: 20px;">
+            <label for="searchInput">
+                Search Users by ID
+            </label>
+            <input id="searchInput" class="w-100" placeholder="Ex. 12" [(ngModel)]="searchId" (keyup)="searchUsers()">
         </div>
     </div>
 </div>
+<div class="header-placeholder"></div>
 
 <div class="center">
     <div class="container">
         <div class="user-container">
+            <div *ngIf="filteredUsers.length == 0">
+                <i>No users found!</i>
+            </div>
             <div *ngFor="let user of filteredUsers" [routerLink]="user.id.toString()" class="user">
-                <div class="avatar">
-                    {{ user.avatar }}
-                </div>
+                <div class="avatar" [ngStyle]="{ backgroundImage: 'url(' + user.avatar + ')' }"></div>
                 <div class="name">
                     {{ user.first_name + " " + user.last_name }}
                 </div>
