--- a/src/app/components/users/users.component.scss
+++ b/src/app/components/users/users.component.scss
@@ -1,23 +1,37 @@
-.center {
-    text-align: center;
-}
-
-.container {
-    display: inline-block;
-    text-align: left;
-    width: 100%;
-    max-width: 960px;
-    padding: 0 25px;
-}
-
 .header-parent {
-    background: blue;
+    background: #412278;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
 }
 
 .header-content {
     display: flex;
     align-items: center;
     height: 80px;
+}
+
+.header-placeholder {
+    height: 80px;
+}
+
+label[for=searchInput] {
+    color: #fff; white-space: nowrap;
+}
+
+#searchInput {
+    padding: 0 10px;
+    line-height: 34px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0;
+    &:focus {
+        border: 3px solid rgba(35, 4, 90, 1);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
 }
 
 .user-container {
@@ -28,20 +42,27 @@
     margin-top: 20px;
     cursor: pointer;
     background: #fff;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px     ;
     transition: all 0.2s ease;
-    // .avatar {
-
-    // }
-    // .name {
-
-    // }
+    padding: 15px 20px;
+    display: flex;
+    align-items: center;
+    .avatar {
+        background: no-repeat center center/cover;
+        border-radius: 100%;
+        height: 40px;
+        width: 40px;
+    }
+    .name {
+        margin-left: 15px;
+    }
     &:first-child {
         margin-top: 0;
     }
     &:hover {
         transform: translateY(-5px);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     }
 }
 
